--- a/socialregistration/templates/socialregistration/hyves_button.html
+++ b/socialregistration/templates/socialregistration/hyves_button.html
@@ -5,5 +5,5 @@
 {% if next %}
     <input type="hidden" name="next" value="{{ next }}" />
 {% endif %}
-<input type="image" onclick="this.form.submit();" src="http://apiwiki.twitter.com/f/1242697608/Sign-in-with-Twitter-lighter.png" />
+<input type="submit" onclick="this.form.submit();" value="Hyves" />
 </form>
