--- a/socialregistration/templates/socialregistration/linkedin_button.html
+++ b/socialregistration/templates/socialregistration/linkedin_button.html
@@ -3,5 +3,5 @@
 {% if next %}
     <input type="hidden" name="next" value="{{ next }}" />
 {% endif %}
-<input type="image" onclick="this.form.submit();" src="http://apiwiki.twitter.com/f/1242697608/Sign-in-with-Twitter-lighter.png" />
+<input type="image" onclick="this.form.submit();" src="http://developer.linkedin.com/servlet/JiveServlet/downloadImage/102-1101-11-1003/30-25/LinkedIn_Logo16px.png" />
 </form>
