--- a/socialregistration/templates/socialregistration/hyves_button.html
+++ b/socialregistration/templates/socialregistration/hyves_button.html
@@ -3,9 +3,9 @@
     <input type="hidden" name="next" value="{{ next }}" />
 {% endif %}
 
-    <input type="hidden" name="userid" />
-    <input type="hidden" name="username" />
-    <input type="hidden" name="url" />
+    <input type="hidden" name="userid" id="userid" />
+    <input type="hidden" name="username" id="username" />
+    <input type="hidden" name="url" id="id" />
 
     <div id="loginDiv">
       <!-- This is the location where the connect with Hyves buttons is displayed when the auto login attempt fails -->     
