Fix in template

--- a/socialregistration/templates/socialregistration/hyves_button.html
+++ b/socialregistration/templates/socialregistration/hyves_button.html
@@ -5,7 +5,7 @@
 
     <input type="hidden" name="userid" id="userid" />
     <input type="hidden" name="username" id="username" />
-    <input type="hidden" name="url" id="id" />
+    <input type="hidden" name="url" id="url" />
 
     <div id="loginDiv">
       <!-- This is the location where the connect with Hyves buttons is displayed when the auto login attempt fails -->     
