Hyves disable auto login

--- a/socialregistration/templates/socialregistration/hyves_js.html
+++ b/socialregistration/templates/socialregistration/hyves_js.html
@@ -25,7 +25,7 @@
           // Define your own or leave empty if you want to use the default image
           // image: "", 
           // Set to true if you want to automatically attempt to login. Set to false to show the connect button instead
-          autoAttempt: true 
+          autoAttempt: false 
      };
  
      // Define where the login button should be displayed if the autoAttempt fails or is disabled
