New facebook graph api connect --old version will be deprecated--

--- a/socialregistration/templates/socialregistration/facebook_button.html
+++ b/socialregistration/templates/socialregistration/facebook_button.html
@@ -1,7 +1,7 @@
 
-<form class="connect-button" name="login" method="post" action="{% if logged_in %}{% url facebook_connect %}{% else %}{% url facebook_login %}{% endif %}">
+<form class="connect-button" name="login" method="post" action="{% url facebook_graph_connect %}">
 {% if next %}
     <input type="hidden" name="next" value="{{ next }}" />
 {% endif %}
-<input type="image" onclick="facebookConnect(this.form);return false;" src="http://static.ak.fbcdn.net/images/fbconnect/login-buttons/connect_light_large_long.gif" />
+<input type="image" onclick="this.form.submit();" src="http://static.ak.fbcdn.net/images/fbconnect/login-buttons/connect_light_large_long.gif" />
 </form>
