--- a/socialregistration/templates/socialregistration/facebook_button.html
+++ b/socialregistration/templates/socialregistration/facebook_button.html
@@ -1,5 +1,6 @@
-
-<form class="connect-button" name="login" method="post" action="{% url facebook_graph_login %}">
+{% load socialregistration_tags %} 
+<form class="connect-button" name="login" method="post" action="{% url facebook_login %}">
+  {% social_csrf_token %}
 {% if next %}
     <input type="hidden" name="next" value="{{ next }}" />
 {% endif %}
