--- a/socialregistration/templates/socialregistration/twitter_button.html
+++ b/socialregistration/templates/socialregistration/twitter_button.html
@@ -1,5 +1,6 @@
-{% load twitter_tags %}
+{% load socialregistration_tags %}
 <form class="connect-button" name="login" method="post" action="{% url twitter_redirect %}">
+  {% social_csrf_token %}
 {% if next %}
     <input type="hidden" name="next" value="{{ next }}" />
 {% endif %}
